tests/errors/non-exact-trig-fsm.expect
---STDERR---
error: FSMs trigger port must have an @exact specification
  ┌─ tests/errors/non-exact-trig-fsm.fil:5:12
  │
5 │   fsm M[5](trig);
  │            ^^^^ Port's specification is @[G, G+5]

